kubernetes/apps/music-assistant/music-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
  namespace: music-assistant
  labels:
    app: music-assistant
spec:
  type: ClusterIP
  selector:
    app: music-assistant
  ports:
    - name: http
      port: 8095
      targetPort: http
      protocol: TCP
    - name: sendspin
      port: 8927
      targetPort: sendspin
      protocol: TCP
