kubernetes/apps/music-assistant/music-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
  namespace: music-assistant
spec:
  hostnames:
    - music.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: music-assistant
          namespace: music-assistant
          port: 8095
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sendspin
  namespace: music-assistant
spec:
  hostnames:
    - sendspin.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: music-assistant
          namespace: music-assistant
          port: 8927
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
